# schedule-desktop

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  claude.md  package-lock.json  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release-windows.yml
.tauri/: signing.key.pub
agenda-watchdog/: Cargo.toml
agenda-watchdog/src/: main.rs
docs/: ARQUITETURA-E-STACK.md  CICLOS-PROXIMOS.md  COMO-RODAR.md  DEPENDENCIAS.md  GOOGLE-CALENDAR-FASE2.md  INTENCAO-VIGIA-WALLPAPER.md  MULTI-MONITOR.md  PLANEJAMENTO.md  RELEASE.md  ROADMAP-WORKERW-AB.md  TAREFAS-POR-CICLO.md  WATCHDOG.md
scripts/: copy-watchdog.mjs  run-watchdog-release.mjs
src/: agenda.js  event-editor-google.css  index.html  main.js  restore-pill.html  restore-pill.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: calendar_model.rs  google_calendar.rs  lib.rs  local_store.rs  main.rs  windows_autostart.rs  windows_desktop.rs  workerw_log.rs
src-tauri/windows/: installer.nsi
