[package]
name = "agenda-watchdog"
version = "0.1.5"
edition = "2021"
description = "Vigia mínimo para relançar a Agenda após falha (Windows)"
publish = false

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
