[package]
name = "calendario-app"
version = "0.1.0"
description = "Calendário desktop (widget + app) com sync Google Calendar"
authors = ["Calendário App Contributors"]
edition = "2021"

[lib]
name = "calendario_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
