[package]
name = "calendario-app"
version = "0.1.1"
description = "Calendário desktop (widget + app) com sync Google Calendar"
authors = ["Calendário App Contributors"]
edition = "2021"

[lib]
name = "calendario_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
keyring = "3"
rand = "0.8"
sha2 = "0.10"
base64 = { version = "0.22", features = ["std"] }
url = "2"
urlencoding = "2"
open = "5"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
] }
